# STM32_programming

./: Four Leds Button.txt  PIN_CONNECTIONS.txt  README.md
Five Leds/: .cproject  .mxproject  .project  Five Leds Debug.launch  Five Leds.ioc
Five Leds/Core/Inc/: main.h
Five Leds/Core/Src/: main.c
Five Leds/Debug/: Five Leds.elf  Five Leds.list  Five Leds.map  makefile
Five Leds/Release/: Five Leds.elf  Five Leds.list  Five Leds.map
Four Leds and Button/: .cproject  .mxproject  .project  Four Leds and Button.elf.launch  Four Leds and Button.ioc  STM32L073RZ_FLASH.ld
Four Leds and Button/Inc/: main.h  stm32l0xx_it.h
Four Leds and Button/MDK-ARM/: Four Leds and Button.uvgui.NUC  Four Leds and Button.uvgui_NUC.bak  Four Leds and Button.uvopt  Four Leds and Button.uvproj  Four Leds and Button_uvopt.bak  Four Leds and Button_uvproj.bak
Four Leds and Button/MDK-ARM/Four Leds and Button/: Four Leds and Button.build_log.htm
Four Leds and Button/Src/: main.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
Interrupt and Leds/: .cproject  .mxproject  .project  Interrupt and Leds.ioc
Interrupt and Leds/Inc/: main.h  stm32l0xx_it.h
Interrupt and Leds/MDK-ARM/: Interrupt and Leds.uvgui.NUC  Interrupt and Leds.uvgui_NUC.bak  Interrupt and Leds.uvopt  Interrupt and Leds.uvproj  Interrupt and Leds_uvopt.bak  Interrupt and Leds_uvproj.bak
Interrupt and Leds/MDK-ARM/Interrupt and Leds/: Interrupt and Leds.build_log.htm
Interrupt and Leds/Src/: main.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
Potentiometer_Leds/: .cproject  .mxproject  .project  Potentiometer_Leds.elf.launch  Potentiometer_Leds.ioc
Potentiometer_Leds/Debug/: Potentiometer_Leds.elf  Potentiometer_Leds.hex  Potentiometer_Leds.list  Potentiometer_Leds.map
Potentiometer_Leds/Debug/Src/: main.su  (+2 more)
Potentiometer_Leds/Inc/: main.h  stm32l0xx_it.h
Potentiometer_Leds/MDK-ARM/: Potentiometer_Leds.uvgui.NUC  Potentiometer_Leds.uvgui_NUC.bak  Potentiometer_Leds.uvopt  Potentiometer_Leds.uvoptx  Potentiometer_Leds.uvproj  Potentiometer_Leds.uvprojx  Potentiometer_Leds_Potentiometer_Leds.dep  Potentiometer_Leds_uvopt.bak  Potentiometer_Leds_uvproj.bak  startup_stm32l073xx.lst
Potentiometer_Leds/Src/: main.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
Pwm Led/: .cproject  .mxproject  .project  Debug_STM32L073VZ_FLASH.ld  Pwm Led.ioc
Pwm Led/Inc/: main.h  stm32l0xx_it.h
Pwm Led/MDK-ARM/: Pwm Led.uvgui.NUC  Pwm Led.uvgui_NUC.bak  Pwm Led.uvopt  Pwm Led.uvproj  Pwm Led_Pwm Led.dep  Pwm Led_uvopt.bak  Pwm Led_uvproj.bak  startup_stm32l073xx.lst
Pwm Led/Src/: main.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c
Sample_four_leds/: .cproject  .mxproject  .project  CMakeLists.txt  Sample_four_leds Debug.launch  Sample_four_leds.ioc  gcc-arm-none-eabi.cmake
Sample_four_leds/Core/Inc/: main.h
Sample_four_leds/Core/Src/: main.c  stm32l0xx_it.c
Sample_four_leds/Debug/: Sample_four_leds.elf  Sample_four_leds.list  Sample_four_leds.map  makefile  objects.list
Sample_four_leds/Debug/Core/Src/: main.d  main.su  stm32l0xx_it.d  subdir.mk  system_stm32l0xx.d
Sample_four_leds/Debug/Drivers/STM32L0xx_HAL_Driver/Src/: stm32l0xx_ll_dma.d  stm32l0xx_ll_exti.d  stm32l0xx_ll_gpio.d  stm32l0xx_ll_pwr.d  stm32l0xx_ll_rcc.d  stm32l0xx_ll_rcc.su  stm32l0xx_ll_usart.d  stm32l0xx_ll_usart.su  stm32l0xx_ll_utils.d  subdir.mk
blinkfour_leds/: .cproject  .mxproject  .project  blinkfour_leds Debug.launch  blinkfour_leds.ioc
blinkfour_leds/Debug/: blinkfour_leds.elf  blinkfour_leds.list  blinkfour_leds.map  makefile
custom_blink/: .cproject  .mxproject  .project  custom_blink.ioc
custom_blink/Debug/: custom_blink.elf  custom_blink.list  custom_blink.map  makefile
four_leds_button/: .cproject  .mxproject  .project  four_leds_button Debug.launch  four_leds_button.ioc
four_leds_button/Debug/: four_leds_button.elf  four_leds_button.list  four_leds_button.map  makefile
nucleo-l073RZ/include/: mxconstants.h  stm32l0xx_hal_conf.h  stm32l0xx_it.h
test_adc_project/: .project  test_adc_project.ioc
(+183 files in other folders)
